# ChangeLog for g-cpan
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  27 Mar 2007; Michael Cummings <mcummings@gentoo.org> ChangeLog:
  Just cleaning up from the CPAN.pm fixes

  26 Mar 2007; Michael Cummings <mcummings@gentoo.org> ChangeLog:
  rc5; contains fix for different versions of CPAN.pm being loaded, thanks to
  Jmax- for noticing this. Will clean up and post to gentoo shortly.

*g-cpan-0.15_rc5 (26 Mar 2007)

  26 Mar 2007; Michael Cummings <mcummings@gentoo.org> ChangeLog:
  Posting rc4 to help users test out bugs, beginning rc5

  24 Mar 2007; Michael Cummings <mcummings@gentoo.org> ChangeLog:
  Fixed spinner annoyanc (newlines); added check to make sure yaml file is
  valid before attempting to parse it for deps; bug 170137 addressed

  23 Mar 2007; Michael Cummings <mcummings@gentoo.org> ChangeLog:
  Fixed potential bug with checking to see if the module was installed with
  dev-lang/perl - only checking now if it isn't part of the actual request, ie
  g-cpan -i CPAN will work again (dep checking still the same, but now
  perl-gcpan is checked first just to be safe)

  23 Mar 2007; Michael Cummings <mcummings@gentoo.org> ChangeLog:
  Fixed CPAN.pm line 260 - overzealous reading of meta*yml files

  23 Mar 2007; Michael Cummings <mcummings@gentoo.org> ChangeLog:
  Fix for bug 171686 - thats right, allow -u but failed to call --update in flags

  21 Mar 2007; Michael Cummings <mcummings@gentoo.org> ChangeLog:
  Added message for buildpkg users to update /etc/portage/packages, thanks
  fuzzyray :)

  09 Mar 2007; Michael Cummings <mcummings@gentoo.org> ChangeLog:
  Reverting change from bug 167776, niko and talked it over - was right the
  first time. actual fix was elsewhere when i fixed the env imports.

*g-cpan-0.15_rc4 (03 Mar 2007)

  03 Mar 2007; Michael Cummings <mcummings@gentoo.org>:
  Officially removing Config.pm; prepping for snapshot for portage.

  02 Mar 2007; Michael Cummings <mcummings@gentoo.org>: